--- a/app/src/main/res/layout/activity_edit_reservation.xml
+++ b/app/src/main/res/layout/activity_edit_reservation.xml
@@ -312,13 +312,13 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/clock_rotate_left_solid"
+                android:src="@drawable/thumbtack_solid"
                 android:tint="#FF5722" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="History"
+                android:text="Bookings"
                 android:textColor="#FF5722"
                 android:textSize="12sp" />
         </LinearLayout>
