--- a/app/src/main/res/layout/activity_history_screen.xml
+++ b/app/src/main/res/layout/activity_history_screen.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="History"
+            android:text="Bookings"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -130,13 +130,13 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/clock_rotate_left_solid"
+                android:src="@drawable/thumbtack_solid"
                 android:tint="#FF5722" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="History"
+                android:text="Bookings"
                 android:textColor="#FF5722"
                 android:textSize="12sp" />
         </LinearLayout>
