--- a/app/src/main/res/layout/activity_edit_reservation.xml
+++ b/app/src/main/res/layout/activity_edit_reservation.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#222222"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".EditReservationScreen">
 
     <!-- Header -->
@@ -28,7 +29,7 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/arrow_left_solid"
-                android:tint="@color/white" />
+                android:tint="#FF5722" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -302,7 +303,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/historyButton"
+            android:id="@+id/bookingsButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
