--- a/app/src/main/res/layout/activity_history_screen.xml
+++ b/app/src/main/res/layout/activity_history_screen.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#222222"
-    tools:context=".HistoryScreen">
+    tools:context=".HistoryScreen"
+    android:fitsSystemWindows="true">
+
     <!-- Header -->
     <RelativeLayout
         android:layout_width="match_parent"
