--- a/app/src/main/res/layout/activity_setting_screen.xml
+++ b/app/src/main/res/layout/activity_setting_screen.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#222222"
-    tools:context=".SettingScreen">
+    tools:context=".SettingScreen"
+    android:fitsSystemWindows="true">
 
     <!-- Header -->
     <RelativeLayout
@@ -13,6 +14,14 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:background="#333333">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrow_left_solid"
+            android:layout_centerVertical="true"
+            android:tint="#FF5722"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -351,13 +360,13 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/clock_rotate_left_solid"
+                android:src="@drawable/thumbtack_solid"
                 android:tint="#9E9E9E" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="History"
+                android:text="Bookings"
                 android:textColor="#9E9E9E"
                 android:textSize="12sp" />
         </LinearLayout>
