--- a/app/src/main/res/layout/activity_developers_screen.xml
+++ b/app/src/main/res/layout/activity_developers_screen.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#222222"
-    tools:context=".DevelopersScreen">
+    tools:context=".DevelopersScreen"
+    android:fitsSystemWindows="true">
 
     <!-- Header -->
     <RelativeLayout
