--- a/app/src/main/res/layout/activity_pre_order_screen.xml
+++ b/app/src/main/res/layout/activity_pre_order_screen.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#222222"
     android:orientation="vertical"
-    tools:context=".PreOrderScreen">
+    tools:context=".PreOrderScreen"
+    android:fitsSystemWindows="true">
 
     <!-- Header -->
     <RelativeLayout
@@ -28,7 +29,7 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/arrow_left_solid"
-                android:tint="@color/white" />
+                android:tint="#FF5722" />
 
             <TextView
                 android:layout_width="wrap_content"
