--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#222222"
     android:orientation="vertical"
-    tools:context=".ProfileScreen">
+    tools:context=".ProfileScreen"
+    android:fitsSystemWindows="true">
 
     <!-- Header with consistent styling -->
     <RelativeLayout
