--- a/app/src/main/res/layout/activity_restaurant_detail_screen.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail_screen.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#222222">
+    android:background="#222222"
+    android:fitsSystemWindows="true">
 
     <!-- Header with back button and restaurant name -->
     <RelativeLayout
