--- a/app/src/main/res/layout/activity_set_new_pass_screen.xml
+++ b/app/src/main/res/layout/activity_set_new_pass_screen.xml
@@ -5,32 +5,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#222222"
-    android:padding="16dp"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SetNewPassScreen">
+    tools:context=".SetNewPassScreen"
+    android:fitsSystemWindows="true">
 
     <!-- Back Button -->
     <LinearLayout
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginVertical="20dp">
+        android:layout_marginVertical="20dp"
+        android:paddingHorizontal="16dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/arrow_left_solid"
-            android:tint="#FFFFFF"/>
+            android:tint="#FF5722"/>
 
-        <TextView
+        <!--removed text for consistency-->
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="4dp"/>
+            android:layout_marginStart="4dp"/>-->
     </LinearLayout>
 
     <!-- Main Content -->
@@ -38,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="15dp"
+        android:paddingHorizontal="16dp">
 
         <!-- Set New Password Title -->
         <TextView
