--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,8 @@
     android:background="#222222"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".SplashScreen">
+    tools:context=".SplashScreen"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="wrap_content"
